SPFresh implementation based on SPTAG (#405)
* Initial commit

* init from update version

* merged code

* backup

* continue

* update the initial work version

* fix ExtraDynamicSearcher

* fix vectorTranslateMap

* fix compiling issues

* fix compling

* fix compiling

* add merge

* add merge re-assign

* TODO: add steady state test

* init steady state test

* Init SPDKIO

* optimize split

* fix align_round

* modify steady state: delete after search

* modify trace

* need to figure out disk usage

* modify steadystate

* need to debug load index

* fix delete by metadata

* add spfresh exe

* finish benchmark

* steady state complete

* add KVTest

* fix compiling errors

* Init SPDKIO

* optimize split

* add KVTest

* fix compiling errors

* change update vector to partital read

* modify merge

* fix build

* mem impl

* fix correctness

* Refactor code

* add spdk as module

* add isal-l_crypto as submodule

* initial spdk integration

* build queue infra

* spdk working

* add reference bdev.json

* static spfresh search done

* need to debug split

* debug for GC/ReAssign

* finish debug for GC/ReAssign

* Add build guide for SPDK version

* remove rocksdb

* add timeout support for SPDK

* modify code for timeout support

* fix timeout bug

* fix writeblocks segmentation fault

* fix bug: SPDK init fail

* fix timeout bugs

* batch ReadBlocks

* add batchSize option

* add timeout support for batched I/O

* Refine Index

* debug refine

* modify for stress test

* change update from metadata to mapping

* modify

* add IOStatistics for SPDK

* change ssd size

* modify for stress test

* fix ssd usage bug

* fix io limit

* modify ssd size for stress test

* for io stat

* modify for io

* fix for stress test

* temporarily remove rebuild

* fix BKT bug

* merge changes from Index.h BKTIndex.cpp
and RelativeNeighborhoodGraph.h

* add lock for mapping

* fix merge bug

* Improve README.md

* add loading exclude head

* modify length

* fix code with A

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,12 @@
 	path = ThirdParty/zstd
 	url = https://github.com/facebook/zstd
 	branch = release
+[submodule "ThirdParty/spdk"]
+	path = ThirdParty/spdk
+	url = https://github.com/spdk/spdk
+[submodule "ThirdParty/isal-l_crypto"]
+	path = ThirdParty/isal-l_crypto
+	url = https://github.com/intel/isa-l_crypto
+[submodule "ThirdParty/RocksDB"]
+	path = ThirdParty/RocksDB
+	url = git@github.com:facebook/rocksdb.git
