--- a/AnnService/packages.config
+++ b/AnnService/packages.config
@@ -8,5 +8,7 @@
   <package id="boost_system-vc142" version="1.72.0.0" targetFramework="native" />
   <package id="boost_thread-vc142" version="1.72.0.0" targetFramework="native" />
   <package id="boost_wserialization-vc142" version="1.72.0.0" targetFramework="native" />
+  <package id="tbb" version="4.2.3.1" targetFramework="native" />
+  <package id="tbb.redist" version="4.2.3.1" targetFramework="native" />
   <package id="Zstandard.dyn.x64" version="1.4.0" targetFramework="native" />
 </packages>
