--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -19,7 +19,7 @@ if (NOT LIBRARYONLY)
         message (FATAL_ERROR "Could not find Boost 1.67!")
     endif()
 
-    include_directories(${PROJECT_SOURCE_DIR}/AnnService ${PROJECT_SOURCE_DIR}/Test)
+    include_directories(${PROJECT_SOURCE_DIR}/AnnService ${PROJECT_SOURCE_DIR}/Test ${PROJECT_SOURCE_DIR}/ThirdParty/spdk/build/include)
 
     file(GLOB TEST_HDR_FILES ${PROJECT_SOURCE_DIR}/Test/inc/Test.h)
     file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/Test/src/*.cpp)
