--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,15 @@ else()
     message (FATAL_ERROR "Could no find openmp!")
 endif()
 
-find_package(Boost 1.66 COMPONENTS system thread serialization wserialization regex filesystem)
+option(GPU "GPU" ON)
+option(LIBRARYONLY "LIBRARYONLY" ON)
+
+if (LIBRARYONLY)
+    find_package(Boost 1.66)
+else()
+    find_package(Boost 1.66 COMPONENTS system thread serialization wserialization regex filesystem)
+endif()
+
 if (Boost_FOUND)
     include_directories (${Boost_INCLUDE_DIR})
     link_directories (${Boost_LIBRARY_DIR})
@@ -115,12 +123,13 @@ else()
     message (FATAL_ERROR "Could not find Boost >= 1.67!")
 endif()
 
-option(GPU "GPU" ON)
-option(LIBRARYONLY "LIBRARYONLY" OFF)
 
-add_subdirectory (ThirdParty/zstd/build/cmake)
+# add_subdirectory (ThirdParty/zstd/build/cmake)
 
 add_subdirectory (AnnService)
 add_subdirectory (Test)
 add_subdirectory (GPUSupport)
-add_subdirectory (Wrappers)
+
+if (NOT LIBRARYONLY)
+    add_subdirectory (Wrappers)
+endif()
