[PlanetScale] fix compilation in `merge_spfresh` branch
Signed-off-by: Vicent Marti <vmg@strn.cat>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,16 @@ else()
     message (FATAL_ERROR "Could no find openmp!")
 endif()
 
-find_package(Boost 1.66 COMPONENTS system thread serialization wserialization regex filesystem)
+option(GPU "GPU" ON)
+option(LIBRARYONLY "LIBRARYONLY" ON)
+option(ROCKSDB "ROCKSDB" ON)
+
+if (LIBRARYONLY)
+    find_package(Boost 1.66)
+else()
+    find_package(Boost 1.66 COMPONENTS system thread serialization wserialization regex filesystem)
+endif()
+
 if (Boost_FOUND)
     include_directories (${Boost_INCLUDE_DIR})
     link_directories (${Boost_LIBRARY_DIR})
@@ -115,17 +124,24 @@ else()
     message (FATAL_ERROR "Could not find Boost >= 1.67!")
 endif()
 
-option(GPU "GPU" ON)
-option(LIBRARYONLY "LIBRARYONLY" OFF)
-option(ROCKSDB "ROCKSDB" ON)
-
 if (ROCKSDB)
+    set(FAIL_ON_WARNINGS OFF)
+    set(WITH_TESTS OFF)
+    set(WITH_BENCHMARK_TOOLS OFF)
+    set(WITH_ZLIB OFF)
+    set(ROCKSDB_BUILD_SHARED OFF)
+    set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
+    add_subdirectory(ThirdParty/RocksDB)
     add_definitions(-DROCKSDB)
+    include_directories(ThirdParty/RocksDB/include)
 endif()
 
-add_subdirectory (ThirdParty/zstd/build/cmake)
+# add_subdirectory (ThirdParty/zstd/build/cmake)
 
 add_subdirectory (AnnService)
 add_subdirectory (Test)
 add_subdirectory (GPUSupport)
-add_subdirectory (Wrappers)
+
+if (NOT LIBRARYONLY)
+    add_subdirectory (Wrappers)
+endif()
