cmake: use RocksDB as a CMake dependency
Signed-off-by: Vicent Marti <vmg@strn.cat>

--- a/AnnService/CMakeLists.txt
+++ b/AnnService/CMakeLists.txt
@@ -50,28 +50,15 @@ if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
     target_compile_options(DistanceUtils PRIVATE -mavx2 -mavx -msse -msse2 -mavx512f -mavx512bw -mavx512dq -fPIC)
 endif()
 
-find_package(RocksDB CONFIG)
-if((DEFINED RocksDB_DIR) AND RocksDB_DIR)
-    list(APPEND RocksDB_LIBRARIES RocksDB::rocksdb-shared)
-    find_package(uring)
-    set(uring_LIBRARIES "")
-    message (STATUS "Found RocksDB ${RocksDB_VERSION}")
-    message (STATUS "RocksDB: ${RocksDB_DIR}")
-else()
-    set(RocksDB_LIBRARIES "")
-    set(uring_LIBRARIES "")
-    message (FATAL_ERROR "Could not find RocksDB!")
-endif()
-
 find_package(TBB REQUIRED)
 if (TBB_FOUND)
     message (STATUS "Found TBB")
 endif()
 
 add_library (SPTAGLib SHARED ${SRC_FILES} ${HDR_FILES})
-target_link_libraries (SPTAGLib DistanceUtils ${RocksDB_LIBRARIES} ${uring_LIBRARIES} zstd ${NUMA_LIBRARY} tbb ${SPDK_LIBRARIES})
+target_link_libraries (SPTAGLib DistanceUtils ${ROCKSDB_SHARED_LIB} ${NUMA_LIBRARY} tbb ${SPDK_LIBRARIES})
 add_library (SPTAGLibStatic STATIC ${SRC_FILES} ${HDR_FILES})
-target_link_libraries (SPTAGLibStatic DistanceUtils ${RocksDB_LIBRARIES} ${uring_LIBRARIES} libzstd_static ${NUMA_LIBRARY_STATIC} tbb ${SPDK_LIBRARIES})
+target_link_libraries (SPTAGLibStatic DistanceUtils ${ROCKSDB_STATIC_LIB} ${NUMA_LIBRARY_STATIC} tbb ${SPDK_LIBRARIES})
 if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
     target_compile_options(SPTAGLibStatic PRIVATE -fPIC)
 endif()
