--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,7 +129,11 @@ option(ROCKSDB "ROCKSDB" ON)
 
 if (ROCKSDB)
     set(FAIL_ON_WARNINGS OFF)
-    add_subdirectory(ThirdParty/RocksDB)
+    set(WITH_TESTS OFF)
+    set(WITH_BENCHMARK_TOOLS OFF)
+    set(WITH_ZLIB OFF)
+    set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
+    add_subdirectory(ThirdParty/RocksDB EXCLUDE_FROM_ALL)
     add_definitions(-DROCKSDB)
     include_directories(ThirdParty/RocksDB/include)
 endif()
