cmake: fix RocksDB compilation
Signed-off-by: Vicent Marti <vmg@strn.cat>

--- a/AnnService/CMakeLists.txt
+++ b/AnnService/CMakeLists.txt
@@ -56,9 +56,9 @@ if (TBB_FOUND)
 endif()
 
 add_library (SPTAGLib SHARED ${SRC_FILES} ${HDR_FILES})
-target_link_libraries (SPTAGLib DistanceUtils ${ROCKSDB_SHARED_LIB} ${NUMA_LIBRARY} tbb ${SPDK_LIBRARIES})
+target_link_libraries (SPTAGLib DistanceUtils rocksdb ${NUMA_LIBRARY} tbb ${SPDK_LIBRARIES})
 add_library (SPTAGLibStatic STATIC ${SRC_FILES} ${HDR_FILES})
-target_link_libraries (SPTAGLibStatic DistanceUtils ${ROCKSDB_STATIC_LIB} ${NUMA_LIBRARY_STATIC} tbb ${SPDK_LIBRARIES})
+target_link_libraries (SPTAGLibStatic DistanceUtils rocksdb ${NUMA_LIBRARY_STATIC} tbb ${SPDK_LIBRARIES})
 if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
     target_compile_options(SPTAGLibStatic PRIVATE -fPIC)
 endif()
