--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,8 +132,9 @@ if (ROCKSDB)
     set(WITH_TESTS OFF)
     set(WITH_BENCHMARK_TOOLS OFF)
     set(WITH_ZLIB OFF)
+    set(ROCKSDB_BUILD_SHARED OFF)
     set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
-    add_subdirectory(ThirdParty/RocksDB EXCLUDE_FROM_ALL)
+    add_subdirectory(ThirdParty/RocksDB)
     add_definitions(-DROCKSDB)
     include_directories(ThirdParty/RocksDB/include)
 endif()
