cmake: enable RTTI by default
Signed-off-by: Vicent Marti <vmg@strn.cat>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,7 @@ if (ROCKSDB)
     set(WITH_TESTS OFF)
     set(WITH_BENCHMARK_TOOLS OFF)
     set(WITH_ZLIB OFF)
+    set(USE_RTTI ON CACHE STRING "Enable RTTI in builds")
     set(ROCKSDB_BUILD_SHARED OFF)
     set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
     add_subdirectory(ThirdParty/RocksDB)
