--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,7 @@ if (ROCKSDB)
     set(WITH_ZLIB OFF)
     set(USE_RTTI ON CACHE STRING "Enable RTTI in builds")
     set(ROCKSDB_BUILD_SHARED OFF)
+    set(WITH_NUMA OFF)
     set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
     add_subdirectory(ThirdParty/RocksDB)
     add_definitions(-DROCKSDB)
