--- a/AnnService/CMakeLists.txt
+++ b/AnnService/CMakeLists.txt
@@ -72,30 +72,30 @@ if (NOT LIBRARYONLY)
     file(GLOB SERVER_HDR_FILES ${AnnService}/inc/Server/*.h ${AnnService}/inc/Socket/*.h)
     file(GLOB SERVER_FILES ${AnnService}/src/Server/*.cpp ${AnnService}/src/Socket/*.cpp)
     add_executable (server ${SERVER_FILES} ${SERVER_HDR_FILES})
-    target_link_libraries(server ${Boost_LIBRARIES} SPTAGLibStatic)
+    target_link_libraries(server ${Boost_LIBRARIES} SPTAGLibStatic -lzstd)
 
     file(GLOB CLIENT_HDR_FILES ${AnnService}/inc/Client/*.h ${AnnService}/inc/Socket/*.h)
     file(GLOB CLIENT_FILES ${AnnService}/src/Client/*.cpp ${AnnService}/src/Socket/*.cpp)
     add_executable (client ${CLIENT_FILES} ${CLIENT_HDR_FILES})
-    target_link_libraries(client ${Boost_LIBRARIES} SPTAGLibStatic)
+    target_link_libraries(client ${Boost_LIBRARIES} SPTAGLibStatic -lzstd)
 
     file(GLOB AGG_HDR_FILES ${AnnService}/inc/Aggregator/*.h ${AnnService}/inc/Socket/*.h ${AnnService}/inc/Server/QueryParser.h)
     file(GLOB AGG_FILES ${AnnService}/src/Aggregator/*.cpp ${AnnService}/src/Socket/*.cpp ${AnnService}/src/Server/QueryParser.cpp)
     add_executable (aggregator ${AGG_FILES} ${AGG_HDR_FILES})
-    target_link_libraries(aggregator ${Boost_LIBRARIES} SPTAGLibStatic)
+    target_link_libraries(aggregator ${Boost_LIBRARIES} SPTAGLibStatic -lzstd)
 
     file(GLOB BUILDER_FILES ${AnnService}/src/IndexBuilder/*.cpp)
     add_executable (indexbuilder ${BUILDER_FILES})
-    target_link_libraries(indexbuilder ${Boost_LIBRARIES} SPTAGLibStatic)
+    target_link_libraries(indexbuilder ${Boost_LIBRARIES} SPTAGLibStatic -lzstd)
 
     file(GLOB SEARCHER_FILES ${AnnService}/src/IndexSearcher/*.cpp)
     add_executable (indexsearcher ${SEARCHER_FILES})
-    target_link_libraries(indexsearcher ${Boost_LIBRARIES} SPTAGLibStatic)
+    target_link_libraries(indexsearcher ${Boost_LIBRARIES} SPTAGLibStatic -lzstd)
     
     file(GLOB QUANTIZER_HDR_FILES ${AnnService}/inc/Quantizer/*.h)
     file(GLOB QUANTIZER_FILES ${AnnService}/src/Quantizer/*.cpp)
     add_executable (quantizer ${QUANTIZER_FILES} ${QUANTIZER_HDR_FILES})
-    target_link_libraries(quantizer ${Boost_LIBRARIES} SPTAGLibStatic)
+    target_link_libraries(quantizer ${Boost_LIBRARIES} SPTAGLibStatic -lzstd)
 
     install(TARGETS server client aggregator indexbuilder indexsearcher quantizer
       RUNTIME DESTINATION bin
@@ -106,12 +106,12 @@ if (NOT LIBRARYONLY)
     file(GLOB_RECURSE SSD_SERVING_FILES ${AnnService}/src/SSDServing/*.cpp)
 
     add_executable(ssdserving ${SSD_SERVING_HDR_FILES} ${SSD_SERVING_FILES})
-    target_link_libraries(ssdserving SPTAGLibStatic ${Boost_LIBRARIES})
+    target_link_libraries(ssdserving SPTAGLibStatic ${Boost_LIBRARIES} -lzstd)
     target_compile_definitions(ssdserving PRIVATE _exe)
 
     # for Test
     add_library(ssdservingLib ${SSD_SERVING_HDR_FILES} ${SSD_SERVING_FILES})
-    target_link_libraries(ssdservingLib SPTAGLibStatic ${Boost_LIBRARIES})
+    target_link_libraries(ssdservingLib SPTAGLibStatic ${Boost_LIBRARIES} -lzstd)
 
     find_package(MPI)
     if (MPI_FOUND)
@@ -121,7 +121,7 @@ if (NOT LIBRARYONLY)
         include_directories (${MPI_CXX_INCLUDE_PATH})
         file(GLOB PARTITION_FILES ${AnnService}/src/BalancedDataPartition/*.cpp)
         add_executable(balanceddatapartition ${PARTITION_FILES})
-        target_link_libraries(balanceddatapartition SPTAGLibStatic ${Boost_LIBRARIES} ${MPI_CXX_LIBRARIES})
+        target_link_libraries(balanceddatapartition SPTAGLibStatic ${Boost_LIBRARIES} ${MPI_CXX_LIBRARIES} -lzstd)
     endif()
 
     install(TARGETS ssdservingLib ssdserving
